WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47443
AX: if aria-live is on a <span> or ignored element, live regions don't work
https://bugs.webkit.org/show_bug.cgi?id=47443
Summary
AX: if aria-live is on a <span> or ignored element, live regions don't work
chris fleizach
Reported
2010-10-08 17:35:19 PDT
The problem is that a <span> has no AX role by default, so it becomes ignored. <span>s should probably be AXGroups by default.
Attachments
Patch
(4.63 KB, patch)
2010-10-08 17:52 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-10-08 17:52:32 PDT
Created
attachment 70324
[details]
Patch
WebKit Commit Bot
Comment 2
2010-10-10 15:18:42 PDT
Comment on
attachment 70324
[details]
Patch Clearing flags on attachment: 70324 Committed
r69474
: <
http://trac.webkit.org/changeset/69474
>
WebKit Commit Bot
Comment 3
2010-10-10 15:18:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug