2010-10-10  Chris Fleizach  <cfleizach@apple.com>

Reviewed by Beth Dakin.

        AX: if aria-live is on a <span> or ignored element, live regions don't work
        https://bugs.webkit.org/show_bug.cgi?id=47443

        * platform/mac/accessibility/live-region-on-span-expected.txt: Added.
        * platform/mac/accessibility/live-region-on-span.html: Added.
2010-10-10  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        AX: if aria-live is on a <span> or ignored element, live regions don't work
        https://bugs.webkit.org/show_bug.cgi?id=47443

        If an element has aria attributes, but has no other native role associated with it,
        accessibility should fallback to exposing that element as an AXGroup.

        Test: platform/mac/accessibility/live-region-on-span.html

        * accessibility/AccessibilityRenderObject.cpp:
        (WebCore::AccessibilityRenderObject::determineAccessibilityRole):

git-svn-id: svn://svn.chromium.org/blink/trunk@69474 bbb929c8-8fbe-4397-9dbb-9b2b20218538