third_party/WebKit/WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -3089,6 +3089,10 @@ AccessibilityRole AccessibilityRenderObject::determineAccessibilityRole()
     if (m_renderer->isBlockFlow() || (node && node->hasTagName(labelTag)))
         return GroupRole;
     
+    // If the element does not have role, but it has ARIA attributes, accessibility should fallback to exposing it as a group.
+    if (supportsARIAAttributes())
+        return GroupRole;
+    
     return UnknownRole;
 }
 
